Added links to the website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--======================================= HERO SECTION START HERE =======================================-->
     <section class="hero-section py-sm-2 py-lg-3 py-xl-3 position-relative">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent" id="top">
             <div class="container position-relative d-flex align-items-center nav-container py-2 bg-white">
                 <a class="navbar-brand" href="#">
                     <img class="top-logo" src="./assets/images/top-logo.png" alt="image">
@@ -32,33 +32,33 @@
                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0 my-3 my-lg-0">
                         <li class="nav-item my-1 my-lg-0">
                             <a class="nav-link active p-0 mx-xxl-4 mx-lg-2 mx-xl-3" aria-current="page"
-                                href="#">ABOUT</a>
+                                href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item my-1 my-lg-0">
                             <a class="nav-link active p-0 mx-xxl-4 mx-lg-2 mx-xl-3" aria-current="page"
-                                href="#">RARITY</a>
+                                href="#rarity">RARITY</a>
                         </li>
                         <li class="nav-item my-1 my-lg-0">
                             <a class="nav-link active p-0 mx-xxl-4 mx-lg-2 mx-xl-3" aria-current="page"
-                                href="#">TEAM</a>
+                                href="#team">TEAM</a>
                         </li>
                         <li class="nav-item my-1 my-lg-0">
                             <a class="nav-link active p-0 mx-xxl-4 mx-lg-2 mx-xl-3" aria-current="page"
-                                href="#">ROADMAP</a>
+                                href="#roadmap">ROADMAP</a>
                         </li>
                     </ul>
                     <form class="d-lg-flex align-items-center">
                         <div class="d-flex align-items-center me-5 my-4 my-lg-0">
-                            <a href="#" class="pe-1 me-2  mx-lg-2 px-lg-1 nav-link-img"><img
+                            <a href="https://twitter.com" class="pe-1 me-2  mx-lg-2 px-lg-1 nav-link-img"><img
                                     src="./assets/images/twiter.png" alt="image">
                             </a>
-                            <a href="#" class="mx-2 px-1 nav-link-img">
+                            <a href="https://discord.com" class="mx-2 px-1 nav-link-img">
                                 <img src="./assets/images/discord-nav.png" alt="image">
                             </a>
-                            <a href="#" class="mx-2 px-1 nav-link-img"><img src="./assets/images/boat.png" alt="image">
+                            <a href="https://www.designevo.com/create/logos/boat.html" class="mx-2 px-1 nav-link-img"><img src="./assets/images/boat.png" alt="image">
                             </a>
                         </div>
-                        <button class="text-white bg-brown nav-btn">MINT NOW</button>
+                        <button  class="text-white bg-brown nav-btn">MINT NOW</button>
                     </form>
                 </div>
             </div>
@@ -88,11 +88,11 @@
     <section>
         <div class="container py-5 mt-xl-5">
             <div class="row d-lg-flex flex-row-reverse align-items-center justify-content-between">
-                <div class="col-9 col-sm-7 col-lg-6 mx-auto mx-lg-0 mb-4 mb-sm-5 col-xl-5 ">
+                <div id="about" class="col-9 col-sm-7 col-lg-6 mx-auto mx-lg-0 mb-4 mb-sm-5 col-xl-5 ">
                     <img src="./assets/images/bear-pro.png" class="w-100" alt="image">
                 </div>
-                <div class="col-12 brown col-lg-6 col-xl-5 ">
-                    <div class="pe-xxl-5">
+                <div  class="col-12 brown col-lg-6 col-xl-5 ">
+                    <div class="pe-xxl-5" >
                         <h1 class="main_heading text-center text-lg-start mb-2">What are Bubbly Bears?</h1>
                         <p class="common_para">Bubbly Bears are a community driven, fun NFT project that gives you an
                             adorable
@@ -104,10 +104,10 @@
         </div>
     </section>
     <!-- ===================================== WHAT MAKES US DIFFERENT? SECTION START HERE ============================= -->
-    <section>
+    <section >
         <img src="./assets/images/green-bg.png" class="w-100" alt="image">
-        <section class="differnt-section">
-            <div class="container py-5">
+        <section id="rarity" class="differnt-section">
+            <div  class="container py-5">
                 <div class="row ">
                     <div class="col-12 col-sm-12 col-lg-6 pe-xl-5 ">
                         <h1 class="main_heading  text-center text-sm-start mb-2 text-white fw-400">What makes us
@@ -251,7 +251,7 @@
     <!-- ============================================= BUBBLY BEAR FOUNDER SECITON START HERE =============================== -->
     <section>
         <div class="container py-5 my-4">
-            <p class="text-center common_heading brown my-5">BUBBLY BEAR FOUNDERs</p>
+            <p id="team" class="text-center common_heading brown my-5">BUBBLY BEAR FOUNDERs</p>
             <div class="row d-md-flex align-items-md-center py-lg-4">
                 <div class="col-9 col-md-4 col-xl-4 col-xxl-3 mx-auto mx-md-0 mb-4 mb-md-0">
                     <div class="me-md-2 me-xl-5">
@@ -328,7 +328,7 @@
     </section>
     <!-- ==============================================  ROAD MAP SECTION START HERE ================================================ -->
     <section class="road-map py-5">
-        <p class="common_heading text-center text-white"> ROAD MAP</p>
+        <p id="roadmap" class="common_heading text-center text-white"> ROAD MAP</p>
         <div class="container">
             <div class="row py-4  py-sm-3 my-sm-2 ">
                 <div class="col-6 col-sm-4 col-lg-3 col-xxl-2  mx-sm-0 mx-auto  ">
@@ -466,14 +466,14 @@
             </div>
         </div>
         <div class="container">
-            <a href="#" class="d-block mx-auto"><img class="d-block mx-auto" src="./assets/images/botam-logo.png"
+            <a href="#top" class="d-block mx-auto"><img class="d-block mx-auto" src="./assets/images/botam-logo.png"
                     alt="image"></a>
             <p class="text-center fw-400 text-white fs_sm opcitay_07">Nunc id consequat dolor. Duis ac feugiat dolor,
             </p>
             <div class="d-flex justify-content-center align-items-center">
-                <a href="#"> <img class="nav-link-img " src="./assets/images/twiter-whit.png" alt="image"></a>
-                <a href="#"> <img class="nav-link-img mx-4" src="./assets/images/discord.png" alt="image"></a>
-                <a href="#"><img class="nav-link-img " src="./assets/images/boat-white.png" alt="image"></a>
+                <a href="https://twitter.com"> <img class="nav-link-img " src="./assets/images/twiter-whit.png" alt="image"></a>
+                <a href="https://discord.com"> <img class="nav-link-img mx-4" src="./assets/images/discord.png" alt="image"></a>
+                <a href="https://www.designevo.com/create/logos/boat.html"><img class="nav-link-img " src="./assets/images/boat-white.png" alt="image"></a>
             </div>
         </div>
         <hr class="bg-white">
